@@ -2,125 +2,132 @@
 """
 
 import logging
-from AccessControl import SpecialUsers
-from AccessControl import getSecurityManager
-from AccessControl.SecurityManagement import newSecurityManager
-from AccessControl.SecurityManagement import setSecurityManager
-from Products.Five.browser import BrowserView
-from eea.depiction.browser import atfield, atfolder
-from eea.depiction.browser.interfaces import IImageView
 from zope.component import queryMultiAdapter
 from zope.interface import implements
 from zope.publisher.interfaces import NotFound
-
-
+from Products.Five.browser import BrowserView
+from Products.CMFCore.utils import getToolByName
+from eea.depiction.browser.interfaces import IImageView
+from eea.depiction.browser import atfolder
 logger = logging.getLogger("eea.dataservice")
+
 
 class ImageViewFigure(BrowserView):
     """ Get cover image from folder contents
     """
     implements(IImageView)
-    oldSecurityManager = None
+    _img = False
 
-    def __init__(self, context, request):
-        super(ImageViewFigure, self).__init__(context, request)
+    @property
+    def img(self):
+        """ img
+        """
+        if self._img is False:
+            self._img = None
 
-        self.oldSecurityManager = getSecurityManager()
-        newSecurityManager(request, SpecialUsers.system)
+            here = '/'.join(self.context.getPhysicalPath())
+            query = {
+                'portal_type': 'EEAFigureFile',
+                'path': {
+                    'query': here,
+                    'depth': 1
+                },
+                'sort_on': 'getObjPositionInParent'
+            }
 
-        objs = self.context.objectValues("EEAFigureFile")
+            ctool = getToolByName(self.context, 'portal_catalog')
+            if 'Language' in ctool.indexes():
+                query['Language'] = 'all'
 
-        eeafile = None
-        for obj in objs:
-            children = obj.objectValues("ATBlob")
-            if not children:
-                continue
-
-            eeafile = obj
-            break
-
-        self.img = queryMultiAdapter((eeafile, request), name=u'imgview')
+            brains = ctool.unrestrictedSearchResults(**query)
+            for idx, brain in enumerate(brains):
+                doc = brain.getObject()
+                imgview = queryMultiAdapter((doc, self.request), name=u'imgview')
+                if imgview.img:
+                    self._img = imgview
+                    break
+        return self._img
 
     def display(self, scalename='thumb'):
         """ Display?
         """
         if not self.img:
-            setSecurityManager(self.oldSecurityManager)
             return False
-        res = self.img.display(scalename)
-        setSecurityManager(self.oldSecurityManager)
-        return res
+        return self.img.display(scalename)
 
     def __call__(self, scalename='thumb'):
-        if self.display(scalename):
-            res = self.img(scalename)
-            setSecurityManager(self.oldSecurityManager)
-            return res
-
-        setSecurityManager(self.oldSecurityManager)
-        raise NotFound(self.request, scalename)
+        if not self.display(scalename):
+            raise NotFound(self.request, scalename)
+        return self.img(scalename)
 
 
-class ImageViewFigureFile(BrowserView):
+class ImageViewFigureFile(atfolder.FolderImageView):
     """ Get cover image from folder contents
     """
     implements(IImageView)
+    _img = False
+    original = None
 
-    def __init__(self, context, request):
-        super(ImageViewFigureFile, self).__init__(context, request)
+    @property
+    def img(self):
+        """ img
+        """
+        if self._img is False:
+            self._img = None
 
-        self.oldSecurityManager = getSecurityManager()
-        newSecurityManager(request, SpecialUsers.system)
+            here = '/'.join(self.context.getPhysicalPath())
+            query = {
+                'portal_type': 'Image',
+                'path': {
+                    'query': here,
+                    'depth': 1
+                },
+                'sort_on': 'getId'
+            }
 
-        images = sorted(context.objectValues("ATBlob"),
-                        lambda a, b: cmp(b.getId(), a.getId()))
+            ctool = getToolByName(self.context, 'portal_catalog')
+            if 'Language' in ctool.indexes():
+                query['Language'] = 'all'
 
-        # Get *.zoom.png
-        children = [zimg for zimg in images
-                    if zimg.getId().lower().endswith('.zoom.png')]
+            brains = ctool.unrestrictedSearchResults(**query)
 
-        # Fallback to *.png
-        if not children:
-            children = [pimg for pimg in images
-                        if pimg.getId().lower().endswith('.png')]
+            # Get *.zoom.png
+            children = [brain for brain in brains
+                        if brain.getId.lower().endswith('.zoom.png')]
 
-        #Fallback to *.gif
-        if not children:
-            children = [gimg for gimg in images
-                        if gimg.getId().lower().endswith('.gif')]
+            # Fallback to *.png
+            if not children:
+                children = [brain for brain in brains
+                            if brain.getId.lower().endswith('.png')]
 
-        self.original = None
-        if children:
-            self.original = children[0]
+            #Fallback to *.gif
+            if not children:
+                children = [brain for brain in brains
+                            if brain.getId.lower().endswith('.gif')]
 
-        if self.original:
-            self.img = atfield.ATFieldImageView(self.original, request)
-        else:
-            self.img = atfolder.FolderImageView(context, request)
+            if children:
+                self.original = children[0].getObject()
+
+            if self.original:
+                self._img = queryMultiAdapter((
+                    self.original, self.request), name=u'imgview')
+            else:
+                self._img = super(ImageViewFigureFile, self).img
+        return self._img
 
     def display(self, scalename='thumb'):
         """ Display?
         """
-        if scalename == 'original':
-            res = bool(self.original)
-            setSecurityManager(self.oldSecurityManager)
-            return res
-        try:
-            res = self.img.display(scalename)
-            setSecurityManager(self.oldSecurityManager)
-            return res
-        except Exception, err:
-            logger.exception(err)
-            setSecurityManager(self.oldSecurityManager)
+        if not self.img:
             return False
+
+        if scalename == 'original':
+            return bool(self.original)
+        return self.img.display(scalename)
 
     def __call__(self, scalename='thumb'):
         if self.display(scalename):
             if scalename == 'original':
-                setSecurityManager(self.oldSecurityManager)
                 return self.original
-            res = self.img(scalename)
-            setSecurityManager(self.oldSecurityManager)
-            return res
-        setSecurityManager(self.oldSecurityManager)
+            return self.img(scalename)
         raise NotFound(self.request, scalename)
