@@ -3,6 +3,8 @@ Changelog
 
 14.4-dev0 - (unreleased)
 ---------------------------
+* Bug fix: Optimize imgview adapters by moving code from __init__
+  [avoinea refs #109515]
 
 14.3 - (2019-10-03)
 --------------------------
